--- a/settings.ini
+++ b/settings.ini
@@ -1,13 +1,13 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = nbdev_template
-user = fastai
-# description = A description of your project
-# keywords = some keywords
-# author = Your Name
-# author_email = email@example.com
-# copyright = Your Name or Company Name
+lib_name = rapidd
+user = Eloypinol
+description = Describiendo RAPID
+keywords = learning
+author = Eloy Pinol
+author_email = eloy.p.j@hotmail.com
+copyright = Eloy Pinol
 branch = master
 version = 0.0.1
 min_python = 3.6
