--- a/docs/_data/sidebars/home_sidebar.yml
+++ b/docs/_data/sidebars/home_sidebar.yml
@@ -12,6 +12,9 @@ entries:
     - output: web,pdf
       title: Core
       url: /core
+    - output: web,pdf
+      title: Title
+      url: /Untitled
     output: web
     title: rapidd
   output: web
